--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,22 +2,20 @@
 <web-app id="WebApp_ID" version="3.0"
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-	<display-name>smartbabies</display-name>
-	
+	<display-name>smrtbaby</display-name>
 	<context-param>
 		<param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
 		<param-value>resources.application</param-value>
 	</context-param>
-	
 	<context-param>
 		<description>
 		State saving method: 'client' or 'server' (=default). See JSF Specification 2.5.2</description>
 		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
 		<param-value>client</param-value>
 	</context-param>
-	
 	<context-param>
-		<description>		
+		<description>
+		
 	This parameter tells MyFaces if javascript code should be allowed in
 	the rendered HTML output.
 	If javascript is allowed, command_link anchors will have javascript code
@@ -28,7 +26,6 @@
 		<param-name>org.apache.myfaces.ALLOW_JAVASCRIPT</param-name>
 		<param-value>true</param-value>
 	</context-param>
-	
 	<context-param>
 		<description>
 		
@@ -39,14 +36,13 @@
 		<param-name>org.apache.myfaces.PRETTY_HTML</param-name>
 		<param-value>true</param-value>
 	</context-param>
-	
 	<context-param>
 		<param-name>org.apache.myfaces.DETECT_JAVASCRIPT</param-name>
 		<param-value>false</param-value>
 	</context-param>
-	
 	<context-param>
-		<description>		
+		<description>
+		
 	If true, a javascript function will be rendered that is able to restore the
 	former vertical scroll on every request. Convenient feature if you have pages
 	with long lists and you do not want the browser page to always jump to the top
@@ -56,21 +52,12 @@
 		<param-name>org.apache.myfaces.AUTO_SCROLL</param-name>
 		<param-value>true</param-value>
 	</context-param>
-	
 	<listener>
 		<listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
 	</listener>
-	
 	<servlet>
-		<servlet-name>Faces Servlet</servlet-name>
-		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-		<async-supported>true</async-supported>
-		<!-- <enabled>false</enabled> -->
-	</servlet>
-	
-	<servlet>
-		<description>JAX-RS Tools Generated - Do not modify</description>
+		<description>
+		JAX-RS Tools Generated - Do not modify</description>
 		<servlet-name>JAX-RS Servlet</servlet-name>
 		<servlet-class>com.ibm.websphere.jaxrs.server.IBMRestServlet</servlet-class>
 		<init-param>
@@ -79,22 +66,28 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 		<enabled>true</enabled>
-		<async-supported>true</async-supported>
+		<async-supported>false</async-supported>
 	</servlet>
-	
-	<servlet-mapping>
+	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
-		<url-pattern>/faces/*</url-pattern>
-		<url-pattern>*.xhtml</url-pattern>
-	</servlet-mapping>
-	
+		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+		<enabled>true</enabled>
+		<async-supported>false</async-supported>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>JAX-RS Servlet</servlet-name>
 		<url-pattern>/jaxrs/*</url-pattern>
 		<url-pattern>/rest/*</url-pattern>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
-	
+	<servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>
+		/faces/*</url-pattern>
+		<url-pattern>
+		*.xhtml</url-pattern>
+	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.xhtml</welcome-file>
 		<welcome-file>index.html</welcome-file>
@@ -105,12 +98,11 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
-	
 	<filter>
 		<filter-name>Encoding Filter</filter-name>
 		<filter-class>com.ibm.smarterplanet.healtcare.smartbabies.util.CharacterEncodingFilter</filter-class>
 	</filter>
-	
+
 	<filter-mapping>
 		<filter-name>Encoding Filter</filter-name>
 		<url-pattern>/*</url-pattern>
