--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -111,4 +111,16 @@ JAX-RS Tools Generated - Do not modify</description>
 		<error-code>404</error-code>
 		<location>/error/404.xhtml</location>
 	</error-page>
+	
+	<filter>
+		<filter-name>Cors Filter</filter-name>
+		<filter-class>
+			com.ibm.smarterplanet.healtcare.smartbabies.util.CorsFilter
+		</filter-class>
+		<async-supported>true</async-supported>
+	</filter>
+	<filter-mapping>
+		<filter-name>Cors Filter</filter-name>
+		<url-pattern>/rest/*</url-pattern>
+	</filter-mapping>
 </web-app>
